<resources>
    <string name="app_name">The Journey of Firebase 🔥</string>
    <string name="subscribe">Subscribe</string>
    <string name="see_subscribers">See Subscribers</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="firebase_logo">Firebase Logo</string>
    <string name="title_activity_list_of_subscribers">ListOfSubscribersActivity</string>
    <string name="back_to_home">Back to home</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="realtime_database">Realtime Database 🔥</string>
    <string name="cloud_firestore">Cloud Firestore 🔥</string>
    <string name="back_to_menu">Back to Menu</string>
</resources>
