<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:background="@drawable/bg_login"
        android:layout_height="wrap_content">

    <TextView
            android:textAlignment="center"
            android:id="@+id/title_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/et_bg"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName_update"
            android:hint="@string/name"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/title_update"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail_update"
            android:hint="@string/e_mail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etName_update" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>


    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details"
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete_subscribe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details"
            android:text="@string/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update_subscribe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/btn_delete_subscribe"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etEmail_update"/>

</android.support.constraint.ConstraintLayout>