<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".controller.MainActivity">

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:hint="@string/name"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:hint="@string/e_mail"/>

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etPhone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:hint="@string/phone"/>

    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details_medium"
            android:text="@string/subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCad"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"/>
    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details"
            android:text="@string/see_subscribers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnList" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:src="@mipmap/firebase"
            android:layout_width="0dp"
            android:layout_height="171dp"
            android:id="@+id/imageView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:scaleType="fitCenter"
            android:contentDescription="@string/firebase_logo"/>

</android.support.constraint.ConstraintLayout>