<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".controller.HomeActivity">

    <TextView
            android:textAlignment="center"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/login_form_transparent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>


    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details"
            android:text="@string/realtime_database"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_realtime_database" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details"
            android:text="@string/cloud_firestore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cloud_firestore" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/btn_realtime_database"/>
    <ImageView

            android:src="@mipmap/firebase"
            android:layout_width="0dp"
            android:layout_height="171dp"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:scaleType="fitCenter"
            android:contentDescription="@string/firebase_logo" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"/>


</android.support.constraint.ConstraintLayout>