<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".controller.FirestoreActivity">

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName_firestore"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:hint="@string/name"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail_firestore"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etName_firestore"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:hint="@string/e_mail"/>

    <EditText
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details"
            android:padding="16dp"
            android:background="@drawable/et_bg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etPhone_firestore"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail_firestore"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:hint="@string/phone"/>

    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details_medium"
            android:text="@string/subscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_subscribe_firestore"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhone_firestore"/>

    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details_medium"
            android:text="@string/see_subscribers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_see_subscribe_firestore"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/btn_subscribe_firestore" android:layout_marginTop="8dp"/>
    <Button
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details"
            android:text="@string/back_to_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back_to_menu_firestore" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView

            android:src="@mipmap/firebase"
            android:layout_width="0dp"
            android:layout_height="171dp"
            android:id="@+id/imageView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:scaleType="fitCenter"
            android:contentDescription="@string/firebase_logo"/>

    <TextView
            android:textAlignment="center"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/login_form_transparent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cloud_firestore"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <ProgressBar
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/progressBar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>

</android.support.constraint.ConstraintLayout>